# cross-loop

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-tool-adapter/: SKILL.md
config/: cross-loop.example.yaml
config/tools/: claude-code.yaml  codex.yaml  cursor.yaml  opencode.yaml
cross_loop/: __init__.py  __main__.py  cli.py  config.py  dispatch.py  loop.py  memory.py  state.py  verify.py
docs/: architecture.md  configuration.md  install.md
examples/hello-app/: tasks.yaml
templates/: tasks.example.yaml
tests/: test_memory.py  test_smoke.py  test_verify.py
